--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                 </div>
             </div>    -->
         </div>
+        <button class="clearBtn hidden">Clear All Items</button>
     </div>
+
+    
 
 
 
